--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,6 +1,6 @@
 {
   "generator-react-webpack": {
-    "app-name": "tiles",
+    "app-name": "tilesGrid",
     "architecture": "flux",
     "styles-language": "less",
     "component-suffix": "js"
